tests/parsing/smtlib/mcil/errors/268_define-system_bad_system_name.expected
File "tests/parsing/smtlib/mcil/errors/268_define-system_bad_system_name.mcil", line 1, character 15-16:
1 | (define-system _)
                   ^
Error while parsing a system definition, read the reserved word '_',
      but expected a system name symbol.
